Clamp BrowserActionsContainer::GetWidth()

This fixes an issue where the browser actions bar disappears after
disabling the last extension (intended) and cannot come. Before this
change when re-enabling an extension the bar would not be resized to
include its resize handle so it could not be pulled to bring out the
newly added extension.

The fix seems fairly safe which is good as it needs to be merged into
M67. I'm intending to revisit this part of the code as part of cleanup
work to unify ToolbarActionsBar and BrowserActionsContainer.

Bug: chromium:836182
Change-Id: I2a196edc867ec70dd74aa4690576540b31548b97
Reviewed-on: https://chromium-review.googlesource.com/1030891
Commit-Queue: Peter Boström <pbos@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554202}
Former-commit-id: 95bff1bfd712ccb5f7ad4bfdeaf4ceb26ad0aedf